src/api/java5/jna-dds/src/main/java/org/eclipse/cyclonedds/ddsc/DdscLibrary.java

	/**
	 * Description : This operation enables the status(es) based on the mask set<br>
	 * Arguments :<br>
	 *   -# e Entity to enable the status<br>
	 *   -# mask Status value that indicates the status to be enabled<br>
	 *   -# Returns 0 on success, or a non-zero error value indicating failure if the mask<br>
	 *      does not correspond to the entity.<br>
	 * Original signature : <code>dds_return_t dds_set_enabled_status(dds_entity_t, uint32_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:357</i>
	 */
	public static native DdscLibrary.dds_return_t dds_set_enabled_status(DdscLibrary.dds_entity_t entity, int mask);
	/**
	 * @brief Get entity QoS policies.<br>
	 * This operation allows access to the existing set of QoS policies<br>
	 * for the entity.<br>
	 * TODO: Link to generic QoS information documentation.<br>
	 * @param[in]  e    Entity on which to get qos<br>
	 * @param[out] qos  Pointer to the qos structure that returns the set policies<br>
	 * @returns  0 - Success (DDS_RETCODE_OK).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_OK<br>
	 *                  The existing set of QoS policy values applied to the<br>
	 *                  entity has successfully been copied into the specified<br>
	 *                  qos parameter.<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  The qos parameter is NULL.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_return_t dds_get_qos(dds_entity_t, dds_qos_t*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:381</i>
	 */
	public static native DdscLibrary.dds_return_t dds_get_qos(DdscLibrary.dds_entity_t entity, DdscLibrary.dds_qos_t qos);
	/**
	 * @brief Set entity QoS policies.<br>
	 * This operation replaces the existing set of Qos Policy settings for an<br>
	 * entity. The parameter qos must contain the struct with the QosPolicy<br>
	 * settings which is checked for self-consistency.<br>
	 * The set of QosPolicy settings specified by the qos parameter are applied on<br>
	 * top of the existing QoS, replacing the values of any policies previously set<br>
	 * (provided, the operation returned DDS_RETCODE_OK).<br>
	 * Not all policies are changeable when the entity is enabled.<br>
	 * TODO: Link to generic QoS information documentation.<br>
	 * @note Currently only Latency Budget and Ownership Strength are changeable QoS<br>
	 *       that can be set.<br>
	 * @param[in]  e    Entity from which to get qos<br>
	 * @param[in]  qos  Pointer to the qos structure that provides the policies<br>
	 * @returns  0 - Success (DDS_RETCODE_OK).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_OK<br>
	 *                  The new QoS policies are set.<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  The qos parameter is NULL.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * @retval DDS_RETCODE_IMMUTABLE_POLICY<br>
	 *                  The entity is enabled and one or more of the policies of<br>
	 *                  the QoS are immutable.<br>
	 * @retval DDS_RETCODE_INCONSISTENT_POLICY<br>
	 *                  A few policies within the QoS are not consistent with<br>
	 *                  each other.<br>
	 * Original signature : <code>dds_return_t dds_set_qos(dds_entity_t, const dds_qos_t*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:416</i>
	 */
	public static native DdscLibrary.dds_return_t dds_set_qos(DdscLibrary.dds_entity_t entity, DdscLibrary.dds_qos_t qos);
	/**
	 * @brief Get entity listeners.<br>
	 * This operation allows access to the existing listeners attached to<br>
	 * the entity.<br>
	 * TODO: Link to (generic) Listener and status information.<br>
	 * @param[in]  e        Entity on which to get the listeners<br>
	 * @param[out] listener Pointer to the listener structure that returns the<br>
	 *                      set of listener callbacks.<br>
	 * @returns  0 - Success (DDS_RETCODE_OK).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_OK<br>
	 *                  The listeners of to the entity have been successfully been<br>
	 *                  copied into the specified listener parameter.<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_BAD_PARAMETER<br>
	 *                  The listener parameter is NULL.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_return_t dds_get_listener(dds_entity_t, dds_listener_t*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:440</i>
	 */
	public static native DdscLibrary.dds_return_t dds_get_listener(DdscLibrary.dds_entity_t entity, DdscLibrary.dds_listener_t listener);
	/**
	 * @brief Set entity listeners.<br>
	 * This operation attaches a dds_listener_t to the dds_entity_t. Only one<br>
	 * Listener can be attached to each Entity. If a Listener was already<br>
	 * attached, this operation will replace it with the new one. In other<br>
	 * words, all related callbacks are replaced (possibly with NULL).<br>
	 * When listener parameter is NULL, all listener callbacks that were possibly<br>
	 * set on the Entity will be removed.<br>
	 * @note Not all listener callbacks are related to all entities.<br>
	 * TODO: Link to (generic) Listener and status information.<br>
	 * <b><i>Communication Status</i></b><br>
	 * For each communication status, the StatusChangedFlag flag is initially set to<br>
	 * FALSE. It becomes TRUE whenever that plain communication status changes. For<br>
	 * each plain communication status activated in the mask, the associated<br>
	 * Listener callback is invoked and the communication status is reset<br>
	 * to FALSE, as the listener implicitly accesses the status which is passed as a<br>
	 * parameter to that operation.<br>
	 * The status is reset prior to calling the listener, so if the application calls<br>
	 * the get_<status_name> from inside the listener it will see the<br>
	 * status already reset.<br>
	 * <b><i>Status Propagation</i></b><br>
	 * In case a related callback within the Listener is not set, the Listener of<br>
	 * the Parent entity is called recursively, until a Listener with the appropriate<br>
	 * callback set has been found and called. This allows the application to set<br>
	 * (for instance) a default behaviour in the Listener of the containing Publisher<br>
	 * and a DataWriter specific behaviour when needed. In case the callback is not<br>
	 * set in the Publishers' Listener either, the communication status will be<br>
	 * propagated to the Listener of the DomainParticipant of the containing<br>
	 * DomainParticipant. In case the callback is not set in the DomainParticipants'<br>
	 * Listener either, the Communication Status flag will be set, resulting in a<br>
	 * possible WaitSet trigger.<br>
	 * @param[in]  e        Entity on which to get the listeners<br>
	 * @param[in] listener  Pointer to the listener structure that contains the<br>
	 *                      set of listener callbacks (maybe NULL).<br>
	 * @returns  0 - Success (DDS_RETCODE_OK).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_OK<br>
	 *                  The listeners of to the entity have been successfully been<br>
	 *                  copied into the specified listener parameter.<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_return_t dds_set_listener(dds_entity_t, const dds_listener_t*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:488</i>
	 */
	public static native DdscLibrary.dds_return_t dds_set_listener(DdscLibrary.dds_entity_t entity, DdscLibrary.dds_listener_t listener);
	/**
	 * @brief Creates a new instance of a DDS participant in a domain<br>
	 * If domain is set (not DDS_DOMAIN_DEFAULT) then it must match if the domain has also<br>
	 * been configured or an error status will be returned. Currently only a single domain<br>
	 * can be configured by setting the environment variable {DDSC_PROJECT_NAME_NOSPACE_CAPS}_DOMAIN,<br>
	 * if this is not set the the default domain is 0. Valid values for domain id are between 0 and 230.<br>
	 * *<br>
	 * @param[in]  domain - The domain in which to create the participant (can be DDS_DOMAIN_DEFAULT)<br>
	 * @param[in]  qos - The QoS to set on the new participant (can be NULL)<br>
	 * @param[in]  listener - Any listener functions associated with the new participant (can be NULL)<br>
	 * @returns >0 - Success (valid handle of a participant entity).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * Original signature : <code>dds_entity_t dds_create_participant(const dds_domainid_t, const dds_qos_t*, const dds_listener_t*)</code><br>
	 * <i>native declaration : dds2tmptmp.h:505</i>
	 */
	public static native DdscLibrary.dds_entity_t dds_create_participant(int domain, DdscLibrary.dds_qos_t qos, DdscLibrary.dds_listener_t listener);
	/**
	 * @brief Get entity parent.<br>
	 * This operation returns the parent to which the given entity belongs.<br>
	 * For instance, it will return the Participant that was used when<br>
	 * creating a Publisher (when that Publisher was provided here).<br>
	 * TODO: Link to generic dds entity relations documentation.<br>
	 * @param[in]  entity  Entity from which to get its parent.<br>
	 * @returns >0 - Success (valid entity handle).<br>
	 * @returns <0 - Failure (use dds_err_nr() to get error value).<br>
	 * @retval DDS_RETCODE_ERROR<br>
	 *                  An internal error has occurred.<br>
	 * @retval DDS_RETCODE_ILLEGAL_OPERATION<br>
	 *                  The operation is invoked on an inappropriate object.<br>
	 * @retval DDS_RETCODE_ALREADY_DELETED<br>
	 *                  The entity has already been deleted.<br>
	 * Original signature : <code>dds_entity_t dds_get_parent(dds_entity_t)</code><br>
	 * <i>native declaration : dds2tmptmp.h:523</i>
	 */
	public static native DdscLibrary.dds_entity_t dds_get_parent(DdscLibrary.dds_entity_t entity);
